<resources>
    <string name="app_name">My Nanodegree Portfolio</string>
    <string name="btn_my_app">My Nanodegree</string>
    <string name="btn_popular_movies">Popular Movies</string>
    <string name="btn_stock_hawk">Stock Hawk</string>
    <string name="btn_build_bigger">Build Bigger</string>
    <string name="btn_material">Make your App Material</string>
    <string name="btn_go_ubiquitous">Go Ubiquitous</string>
    <string name="btn_capstone">Capstone</string>
</resources>
