<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.myappportfolio.MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <Button
        android:id="@+id/btn_popular_movies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_popular_movies"
        />

    <Button
        android:id="@+id/btn_stock_hawk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_stock_hawk"/>

    <Button
        android:id="@+id/btn_build_bigger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_build_bigger"/>

    <Button
        android:id="@+id/btn_material"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_material"/>

    <Button
        android:id="@+id/btn_go_ubiquitous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_go_ubiquitous"/>

    <Button
        android:id="@+id/btn_capstone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_capstone"
        android:background="@color/buttonStyle"/>

</LinearLayout>
